--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,29 @@
     
   </body>
 
+  
+  <script>
+    const choseMark = document.querySelector('.chose-mark')
+
+    choseMark.addEventListener('click', function (e) {
+      if (e.target.id === 'player-1') {
+        document.getElementById('player-1').classList.remove('bg-gray-600')
+        document.getElementById('player-2').classList.remove('bg-gray-600')
+        document.getElementById('player-1').classList.add('bg-gray-600')
+      }
+      else {
+        document.getElementById('player-1').classList.remove('bg-gray-600')
+        document.getElementById('player-2').classList.remove('bg-gray-600')
+        document.getElementById('player-2').classList.add('bg-gray-600')
+      }
+    });
+
+    document.getElementById("cpu").addEventListener("click", function () {
+      window.open("play.html", "_self");
+    });
+
+
+  </script>
+
 
 </html>
